--- a/run_predictions.ipynb
+++ b/run_predictions.ipynb
@@ -23,12 +23,12 @@
         "\n",
         "Use this interactive notebook to get predictions on the antimalarial potential of small molecules.\n",
         "\n",
-        "Simply click the play button step by step, and make sure to have your files accessible in Google Drive."
+        "Simply click the play button step by step!"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "gJr_9dXGpJ05",
         "cellView": "form"
@@ -57,261 +57,61 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "C4HZx7Gndbrh",
-        "cellView": "form",
-        "outputId": "a3183792-1879-4a72-d47a-0fb97ce01b53",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ],
       "source": [
-        "# @title 🔗 Connect Colab to your Google Drive\n",
-        "\n",
-        "## Mount google drive\n",
-        "from google.colab import drive\n",
-        "\n",
-        "drive.mount(\"/content/drive\")\n",
-        "\n",
-        "## Click on the folder/directory icon to the left\n",
-        "##      and make sure your drive is mounted"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "4_kCnsPUqS6o"
-      },
-      "source": [
-        "<div class=\"markdown-google-sans\">\n",
-        "\n",
-        "### 📩 Specify your file paths and the input .csv file\n",
-        "</div>\n",
-        "\n",
-        "<div>\n",
-        "\n",
-        "*  Make sure you have a .csv file containing a list of molecules represented as SMILES string\n",
-        "* Specify the exact column name of your smiles column in the .csv file\n",
-        "*  Specify the path to your file in Google Drive\n",
-        "*  Specify the path where you want to store the results in Google Drive\n",
-        "\n",
-        "</div>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# specify your input folder\n",
-        "\n",
-        "input_folder = \"/content/drive/MyDrive/Ersilia\"  # @param {type:\"string\"}"
-      ],
-      "metadata": {
-        "id": "7pKQI_LTPa1G",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# specify your output folder\n",
-        "\n",
-        "output_folder = \"/content/drive/MyDrive/Ersilia\"  # @param {type:\"string\"}"
-      ],
-      "metadata": {
-        "id": "2r13dGXgLxKF",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# specify the name of your input csv file\n",
-        "\n",
-        "input_filename = \"<your filename, for example: my_molecules>\"  # @param {type:\"string\"}"
-      ],
-      "metadata": {
-        "id": "ywqZyGWnP4Ef",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# specify the SMILES column name\n",
-        "smiles_column = \"<smiles>\"  # @param {type:\"string\"}"
-      ],
-      "metadata": {
-        "id": "WW16pY7-xLOV",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "JdoU9sr6D4su",
-        "cellView": "form"
-      },
-      "outputs": [],
-      "source": [
-        "# @title 🔤 Extract SMILES to a list\n",
+        "#@title 📩 Upload input files\n",
+        "#@markdown Upload a csv file with a single column named SMILES\n",
+        "from google.colab import files\n",
         "import pandas as pd\n",
+        "import io\n",
+        "import os\n",
         "\n",
-        "path = \"%s/%s.csv\" % (input_folder, input_filename)\n",
-        "smi_col = \"%s\" % smiles_column\n",
-        "df = pd.read_csv(path)\n",
-        "smiles = df[smi_col].tolist()\n",
-        "\n",
-        "print(\"My dataset contains\" + \" \" + str(len(smiles)) + \" \" + \"SMILES\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "OwuxHmxllTwN"
-      },
-      "source": [
-        "<div class=\"markdown-google-sans\">\n",
-        "\n",
-        "#### 🚀 Use the Ersilia Model Hub to run predictions for your molecules. Check all available models [here](https://ersilia.io/model-hub)\n",
-        "</div>\n",
-        "\n",
-        "1. Enter the model name\n",
-        "2. Fetch models\n",
-        "3. Make predictions\n",
-        "4. Save the result to a .csv file in your google drive."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Enter the model name\n",
-        "# This is just an example, make sure to adapt it to your specific model\n",
-        "\n",
-        "model_name = \"eos80ch\"  # @param {type:\"string\"}"
+        "uploaded = files.upload()\n",
+        "os.remove([k for k in uploaded.keys()][0])\n",
+        "df=pd.read_csv(io.StringIO(uploaded[[k for k in uploaded.keys()][0]].decode('ISO-8859-1')))\n",
+        "smiles = df.iloc[:,0].tolist()\n",
+        "print(u'\\u270D' + \" My dataset contains\" + \" \" + str(len(smiles)) + \" \" + \"SMILES\")"
       ],
       "metadata": {
-        "id": "5xqTcuegSyQF",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "s7LgA6mkjS2E"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "mWRZdAMkmgxZ",
-        "cellView": "form"
-      },
-      "outputs": [],
       "source": [
-        "# @title 📥 Fetch the model\n",
-        "import time\n",
-        "\n",
-        "begin = time.time()\n",
-        "!ersilia fetch $model_name\n",
-        "end = time.time()\n",
-        "\n",
-        "print(\"Time taken:\", round((end - begin), 2), \"seconds\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# @title ⚙️ Serve the model\n",
-        "!ersilia serve $model_name"
-      ],
-      "metadata": {
-        "id": "uYsEZpQ1gN8x",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "TYmcRRZ4mnkx",
-        "cellView": "form"
-      },
-      "outputs": [],
-      "source": [
-        "# @title ⚡ Run predictions\n",
-        "\n",
-        "\n",
+        "# @title 🚀 Get Predictions\n",
         "from ersilia import ErsiliaModel\n",
-        "import time\n",
         "\n",
-        "model = ErsiliaModel(model_name)\n",
-        "begin = time.time()\n",
+        "!ersilia fetch eos80ch\n",
+        "!ersilia serve eos80ch\n",
+        "model = ErsiliaModel(\"eos80ch\")\n",
         "output = model.api(input=smiles, output=\"pandas\")\n",
-        "end = time.time()\n",
-        "\n",
-        "print(\"Successful 👍! Time taken:\", round((end - begin), 2), \"seconds\")\n",
-        "model.close()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# @title ✔️ Check your results\n",
-        "\n",
-        "output.head()"
+        "model.close()\n",
+        "print(u'\\u2705' + \" SMILES predicted successfully!\")"
       ],
       "metadata": {
         "cellView": "form",
-        "id": "ipckLYxPS3GY"
+        "id": "NwNrNO3Nk-VF"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "1cg9EqzVnJSs",
-        "cellView": "form",
-        "outputId": "34b410f3-49f3-4e83-f4de-60e236501499",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Results saved!\n"
-          ]
-        }
-      ],
       "source": [
-        "# @title 💾 Save your results in Google Drive\n",
-        "\n",
-        "output_path = \"%s/%s_output.csv\" % (output_folder, model_name)\n",
-        "output.to_csv(output_path, index=False)\n",
-        "print(\"Results saved!\")"
-      ]
+        "# @title 💾 Save your results!\n",
+        "output.head()\n",
+        "output.to_csv(\"eos80ch_predictions.csv\", index=False)\n",
+        "files.download('eos80ch_predictions.csv')"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "qiyr-Rn7mf1P"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
